--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,15 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/logo/android/play_store_512.png
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo/android/play_store_512.png"
+  adaptive_icon_foreground: "assets/logo/android/play_store_512.png"
+  adaptive_icon_background: "#C5F356"
 
   # To add assets to your application, add an assets section, like this:
   # assets:
