--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   flutter_native_splash: ^2.2.19
   google_fonts: ^4.0.3
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
